--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div class="profile-info">
             <h1>Muhammad Nurudin Al Ibrahimi</h1>
             <p class="title">Polisi Khusus Cagar Budaya</p>
-            <p>Halo! Saya adalah seorang Polisi Khusus Cagar yang bekerja di unit kerja Balai Pelestarian Kebudayaan Wilayah V Provinsi Jambi dan Provinsi Bangka Belitung.</p>
+            <p>Halo! Saya adalah seorang Polisi Khusus Cagar Budaya yang bekerja di unit kerja Balai Pelestarian Kebudayaan Wilayah V Provinsi Jambi dan Provinsi Bangka Belitung.</p>
         </div>
         <div class="social-links">
-            <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/al_ibrahimi_14/" class="social-icon"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/m-nurudin-al-ibrahimi/" class="social-icon"><i class="fab fa-linkedin"></i></a>
             <a href="mailto:nuruddin.alamin98@gmail.com" class="social-icon"><i class="fa-solid fa-envelope"></i></a>
         </div>
         <div class="contact-button">
@@ -28,4 +28,5 @@
         </div>
     </div>
 </body>
+
 </html>
