--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="profile-info">
             <h1>Muhammad Nurudin Al Ibrahimi</h1>
             <p class="title">Polisi Khusus Cagar Budaya</p>
-            <p>Halo! Saya adalah seorang Polisi Khusus Cagar Budaya yang bekerja di unit kerja Balai Pelestarian Kebudayaan Wilayah V Provinsi Jambi dan Provinsi Bangka Belitung.</p>
+            <p>Sebagai seorang Polisi Khusus Cagar Budaya di Balai Pelestarian Kebudayaan Wilayah V, saya meyakini bahwa setiap batu, bangunan, situs, dan tinggalan masa lalu memiliki cerita berharga yang harus dijaga. Peran saya bukan sekedar melindungi dari kerusakan atau ancaman, tetapi juga memastikan bahwa warisan leluhur tetap bisa dinikmati, dipelajari, dan menjadi inspirasi bagi masayarakat luas serta generasi selanjutnya. Melalui kerja pelestarian dan pelayanan publik, saya berusaha menghadirkan cagar budaya sebagai ruang pembelajaran, identitas bangsa, serta perekat harmoni dalam kehidupan berbangsa dan bernegara.</p>
         </div>
         <div class="social-links">
             <a href="https://www.instagram.com/al_ibrahimi_14/" class="social-icon"><i class="fab fa-instagram"></i></a>
@@ -30,3 +30,4 @@
 </body>
 
 </html>
+
