--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
         </div>
         <div class="contact-button">
             <a href="https://wa.me/6282181031362" class="btn">Hubungi Saya</a>
-            <a href="https://arsipaja.nurudinalibrahimi.web.id" class="btn">ArsipAja</a>
+            <a href="arsipaja.html" class="btn">ArsipAja</a>
         </div>
     </div>
 </body>
 
 </html>
+
 
 
